--- a/game/Makefile_Amiga
+++ b/game/Makefile_Amiga
@@ -6,15 +6,15 @@ EGO_BIN := $(PROJ_NAME)
 # the source files
 
 EGO_SRC  := \
-	bbox.c bsp.c camera.c char.c client.c clock.c collision.c \
-	egoboo_console.c egoboo_endian.c egoboo_fileutil.c \
-	egoboo_math.c egoboo_setup.c egoboo_strutil.c egoboo_typedef.c \
-	egoboo_vfs.c enchant.c file_common.c font_bmp.c font_ttf.c game.c \
-	graphic.c graphic_fan.c graphic_mad.c graphic_prt.c hash.c input.c \
-	lighting.c link.c log.c mad.c md2.c menu.c mesh.c network.c \
-	particle.c passage.c profile.c quest.c script.c script_compile.c \
-	script_functions.c server.c sound.c texture.c ui.c egoboo.c physics.c\
-	egoboo_process.c ChrList.c EncList.c PrtList.c egoboo_object.c
+	bbox.cpp bsp.cpp camera.cpp char.cpp client.cpp clock.cpp collision.cpp \
+	egoboo_console.cpp egoboo_endian.cpp egoboo_fileutil.cpp \
+	egoboo_math.cpp egoboo_setup.cpp egoboo_strutil.cpp egoboo_typedef.cpp \
+	egoboo_vfs.cpp enchant.cpp file_common.cpp font_bmp.cpp font_ttf.cpp game.cpp \
+	graphic.cpp graphic_fan.cpp graphic_mad.cpp graphic_prt.cpp hash.cpp input.cpp \
+	lighting.cpp link.cpp log.cpp mad.cpp md2.cpp menu.cpp mesh.cpp network.cpp \
+	particle.cpp passage.cpp profile.cpp quest.cpp script.cpp script_compile.cpp \
+	script_functions.cpp server.cpp sound.cpp texture.cpp ui.cpp egoboo.cpp physics.cpp\
+	egoboo_process.cpp ChrList.cpp EncList.cpp PrtList.cpp egoboo_object.cpp
 
 EGO_PLATFORM    := platform/file_linux.c platform/sys_linux.c
 EGO_FILE_FORMAT := $(wildcard ./file_formats/*.c)
