--- a/game/game.cbp
+++ b/game/game.cbp
@@ -350,112 +350,112 @@
 			<Option target="nix-gcc-debug" />
 			<Option target="nix-gcc-release" />
 		</Unit>
-		<Unit filename="ChrList.c">
+		<Unit filename="ChrList.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="ChrList.h" />
-		<Unit filename="EncList.c">
+		<Unit filename="EncList.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="EncList.h" />
-		<Unit filename="IDSZ_map.c">
+		<Unit filename="IDSZ_map.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="IDSZ_map.h" />
-		<Unit filename="PrtList.c">
+		<Unit filename="PrtList.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="PrtList.h" />
-		<Unit filename="bbox.c">
+		<Unit filename="bbox.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="bbox.h" />
-		<Unit filename="bsp.c">
+		<Unit filename="bsp.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="bsp.h" />
-		<Unit filename="camera.c">
+		<Unit filename="camera.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="camera.h" />
-		<Unit filename="char.c">
+		<Unit filename="char.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="char.h" />
 		<Unit filename="char.inl" />
-		<Unit filename="client.c">
+		<Unit filename="client.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="client.h" />
-		<Unit filename="clock.c">
+		<Unit filename="clock.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="clock.h" />
-		<Unit filename="collision.c">
+		<Unit filename="collision.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="collision.h" />
-		<Unit filename="ego_wrap.c">
+		<Unit filename="ego_wrap.cpp">
 			<Option compilerVar="CC" />
 			<Option compile="0" />
 			<Option link="0" />
 		</Unit>
-		<Unit filename="egoboo.c">
+		<Unit filename="egoboo.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo.h" />
 		<Unit filename="egoboo_config.h" />
-		<Unit filename="egoboo_console.c">
+		<Unit filename="egoboo_console.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_console.h" />
 		<Unit filename="egoboo_console.inl" />
-		<Unit filename="egoboo_display_list.c">
+		<Unit filename="egoboo_display_list.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_display_list.h" />
 		<Unit filename="egoboo_doxygen.h" />
-		<Unit filename="egoboo_endian.c">
+		<Unit filename="egoboo_endian.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_endian.h" />
-		<Unit filename="egoboo_fileutil.c">
+		<Unit filename="egoboo_fileutil.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_fileutil.h" />
-		<Unit filename="egoboo_math.c">
+		<Unit filename="egoboo_math.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_math.h" />
 		<Unit filename="egoboo_math.inl" />
 		<Unit filename="egoboo_mem.h" />
-		<Unit filename="egoboo_object.c">
+		<Unit filename="egoboo_object.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_object.h" />
 		<Unit filename="egoboo_platform.h" />
-		<Unit filename="egoboo_process.c">
+		<Unit filename="egoboo_process.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_process.h" />
-		<Unit filename="egoboo_setup.c">
+		<Unit filename="egoboo_setup.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_setup.h" />
-		<Unit filename="egoboo_strutil.c">
+		<Unit filename="egoboo_strutil.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_strutil.h" />
-		<Unit filename="egoboo_typedef.c">
+		<Unit filename="egoboo_typedef.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_typedef.h" />
 		<Unit filename="egoboo_typedef_cpp.h" />
-		<Unit filename="egoboo_vfs.c">
+		<Unit filename="egoboo_vfs.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="egoboo_vfs.h" />
-		<Unit filename="enchant.c">
+		<Unit filename="enchant.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="enchant.h" />
@@ -484,7 +484,7 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="extensions/ogl_texture.h" />
-		<Unit filename="file_common.c">
+		<Unit filename="file_common.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="file_common.h" />
@@ -545,93 +545,93 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="file_formats/wawalite_file.h" />
-		<Unit filename="font_bmp.c">
+		<Unit filename="font_bmp.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="font_bmp.h" />
-		<Unit filename="font_ttf.c">
+		<Unit filename="font_ttf.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="font_ttf.h" />
-		<Unit filename="game.c">
+		<Unit filename="game.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="game.cbp" />
 		<Unit filename="game.h" />
-		<Unit filename="graphic.c">
+		<Unit filename="graphic.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="graphic.h" />
-		<Unit filename="graphic_fan.c">
+		<Unit filename="graphic_fan.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="graphic_fan.h" />
-		<Unit filename="graphic_mad.c">
+		<Unit filename="graphic_mad.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="graphic_mad.h" />
-		<Unit filename="graphic_prt.c">
+		<Unit filename="graphic_prt.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="graphic_prt.h" />
-		<Unit filename="hash.c">
+		<Unit filename="hash.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="hash.h" />
-		<Unit filename="input.c">
+		<Unit filename="input.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="input.h" />
-		<Unit filename="lighting.c">
+		<Unit filename="lighting.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="lighting.h" />
-		<Unit filename="link.c">
+		<Unit filename="link.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="link.h" />
-		<Unit filename="log.c">
+		<Unit filename="log.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="log.h" />
-		<Unit filename="lua_console.c">
+		<Unit filename="lua_console.cpp">
 			<Option compilerVar="CC" />
 			<Option compile="0" />
 			<Option link="0" />
 		</Unit>
 		<Unit filename="lua_console.h" />
-		<Unit filename="mad.c">
+		<Unit filename="mad.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mad.h" />
-		<Unit filename="md2.c">
+		<Unit filename="md2.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="md2.h" />
 		<Unit filename="md2.inl" />
-		<Unit filename="menu.c">
+		<Unit filename="menu.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
-		<Unit filename="mesh.c">
+		<Unit filename="mesh.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="mesh.h" />
 		<Unit filename="mesh.inl" />
-		<Unit filename="network.c">
+		<Unit filename="network.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="network.h" />
-		<Unit filename="particle.c">
+		<Unit filename="particle.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="particle.h" />
 		<Unit filename="particle.inl" />
-		<Unit filename="passage.c">
+		<Unit filename="passage.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="passage.h" />
-		<Unit filename="physics.c">
+		<Unit filename="physics.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="physics.h" />
@@ -665,45 +665,45 @@
 			<Option target="win32-msvc-debug" />
 			<Option target="win32-msvc-release" />
 		</Unit>
-		<Unit filename="profile.c">
+		<Unit filename="profile.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="profile.h" />
 		<Unit filename="profile.inl" />
-		<Unit filename="quest.c">
+		<Unit filename="quest.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="quest.h" />
-		<Unit filename="rpc.c">
+		<Unit filename="rpc.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="rpc.h" />
-		<Unit filename="script.c">
+		<Unit filename="script.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="script.h" />
-		<Unit filename="script_compile.c">
+		<Unit filename="script_compile.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="script_compile.h" />
-		<Unit filename="script_functions.c">
+		<Unit filename="script_functions.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="script_functions.h" />
-		<Unit filename="server.c">
+		<Unit filename="server.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="server.h" />
-		<Unit filename="sound.c">
+		<Unit filename="sound.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="sound.h" />
 		<Unit filename="system.h" />
-		<Unit filename="texture.c">
+		<Unit filename="texture.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="texture.h" />
-		<Unit filename="ui.c">
+		<Unit filename="ui.cpp">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="ui.h" />
