--- a/game/game_vs9.vcproj
+++ b/game/game_vs9.vcproj
@@ -208,19 +208,19 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\bbox.c"
+				RelativePath=".\bbox.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\bsp.c"
+				RelativePath=".\bsp.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\camera.c"
+				RelativePath=".\camera.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\char.c"
+				RelativePath=".\char.cpp"
 				>
 			</File>
 			<File
@@ -228,15 +228,15 @@
 				>
 			</File>
 			<File
-				RelativePath=".\client.c"
+				RelativePath=".\client.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\collision.c"
+				RelativePath=".\collision.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo.c"
+				RelativePath=".\egoboo.cpp"
 				>
 			</File>
 			<File
@@ -244,7 +244,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\enchant.c"
+				RelativePath=".\enchant.cpp"
 				>
 			</File>
 			<File
@@ -252,47 +252,47 @@
 				>
 			</File>
 			<File
-				RelativePath=".\game.c"
+				RelativePath=".\game.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\graphic.c"
+				RelativePath=".\graphic.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\graphic_fan.c"
+				RelativePath=".\graphic_fan.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\graphic_mad.c"
+				RelativePath=".\graphic_mad.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\graphic_prt.c"
+				RelativePath=".\graphic_prt.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\hash.c"
+				RelativePath=".\hash.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\input.c"
+				RelativePath=".\input.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\lighting.c"
+				RelativePath=".\lighting.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\link.c"
+				RelativePath=".\link.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\mad.c"
+				RelativePath=".\mad.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\Md2.c"
+				RelativePath=".\Md2.cpp"
 				>
 			</File>
 			<File
@@ -300,11 +300,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\menu.c"
+				RelativePath=".\menu.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\mesh.c"
+				RelativePath=".\mesh.cpp"
 				>
 			</File>
 			<File
@@ -312,11 +312,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\network.c"
+				RelativePath=".\network.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\particle.c"
+				RelativePath=".\particle.cpp"
 				>
 			</File>
 			<File
@@ -324,11 +324,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\passage.c"
+				RelativePath=".\passage.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\physics.c"
+				RelativePath=".\physics.cpp"
 				>
 			</File>
 			<File
@@ -336,7 +336,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\profile.c"
+				RelativePath=".\profile.cpp"
 				>
 			</File>
 			<File
@@ -344,31 +344,31 @@
 				>
 			</File>
 			<File
-				RelativePath=".\script.c"
+				RelativePath=".\script.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\script_compile.c"
+				RelativePath=".\script_compile.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\script_functions.c"
+				RelativePath=".\script_functions.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\server.c"
+				RelativePath=".\server.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\sound.c"
+				RelativePath=".\sound.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\texture.c"
+				RelativePath=".\texture.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\ui.c"
+				RelativePath=".\ui.cpp"
 				>
 			</File>
 		</Filter>
@@ -538,7 +538,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\ego_wrap.c"
+				RelativePath=".\ego_wrap.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -558,7 +558,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\egoboo_console.c"
+				RelativePath=".\egoboo_console.cpp"
 				>
 			</File>
 			<File
@@ -570,7 +570,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\lua_console.c"
+				RelativePath=".\lua_console.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -654,51 +654,51 @@
 			Name="Core Source"
 			>
 			<File
-				RelativePath=".\clock.c"
+				RelativePath=".\clock.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_endian.c"
+				RelativePath=".\egoboo_endian.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_fileutil.c"
+				RelativePath=".\egoboo_fileutil.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_math.c"
+				RelativePath=".\egoboo_math.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_process.c"
+				RelativePath=".\egoboo_process.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_setup.c"
+				RelativePath=".\egoboo_setup.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_strutil.c"
+				RelativePath=".\egoboo_strutil.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\egoboo_typedef.c"
+				RelativePath=".\egoboo_typedef.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\font_bmp.c"
+				RelativePath=".\font_bmp.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\font_ttf.c"
+				RelativePath=".\font_ttf.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\log.c"
+				RelativePath=".\log.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\rpc.c"
+				RelativePath=".\rpc.cpp"
 				>
 			</File>
 			<File
@@ -826,7 +826,7 @@
 			Name="File System"
 			>
 			<File
-				RelativePath=".\egoboo_vfs.c"
+				RelativePath=".\egoboo_vfs.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -842,7 +842,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\file_common.c"
+				RelativePath=".\file_common.cpp"
 				>
 			</File>
 			<File
@@ -984,7 +984,7 @@
 					Name="quest.txt"
 					>
 					<File
-						RelativePath=".\quest.c"
+						RelativePath=".\quest.cpp"
 						>
 					</File>
 					<File
@@ -1138,7 +1138,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\MainLoop.c"
+				RelativePath=".\MainLoop.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -1178,7 +1178,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\Task.c"
+				RelativePath=".\Task.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -1218,7 +1218,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\Ticker.c"
+				RelativePath=".\Ticker.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
@@ -1258,7 +1258,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\Timer.c"
+				RelativePath=".\Timer.cpp"
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
