--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -532,7 +532,7 @@
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\egoboo_console.cpp">
+				RelativePath=".\egoboo_console.c">
 			</File>
 			<File
 				RelativePath=".\egoboo_console.h">
@@ -541,7 +541,7 @@
 				RelativePath=".\egoboo_console.inl">
 			</File>
 			<File
-				RelativePath=".\lua_console.cpp">
+				RelativePath=".\lua_console.c">
 				<FileConfiguration
 					Name="Debug|Win32"
 					ExcludedFromBuild="TRUE">
