--- a/game/game_vs10.vcxproj.filters
+++ b/game/game_vs10.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -54,7 +54,7 @@
     <ClCompile Include="collision.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ego_wrap.cpp">
+    <ClCompile Include="ego_wrap.cxx">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="egoboo.cpp">
@@ -129,7 +129,7 @@
     <ClCompile Include="log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="lua_console.cpp">
+    <ClCompile Include="lua_console.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="mad.cpp">
