- converting to c++... compiling and running. Does not compile in release mode at the moment.

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -1026,6 +1026,12 @@
 			Filter="">
 			<File
 				RelativePath=".\Fluid_Studios_Memory_Manager\mmgr.cpp">
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\Fluid_Studios_Memory_Manager\mmgr.h">
