- fixed a minor problem with memory allocation when rendering text - fixed the bug with the menu where certain modules were not selectable - changed the implementation of the "dynamic array" t_dary<> to being just a modified STL vector<>, which solved a lot of problems - factored out the BSP code into their own files

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -370,7 +370,13 @@
 				RelativePath=".\mesh.cpp">
 			</File>
 			<File
+				RelativePath=".\mesh_BSP.cpp">
+			</File>
+			<File
 				RelativePath=".\network.cpp">
+			</File>
+			<File
+				RelativePath=".\object_BSP.cpp">
 			</File>
 			<File
 				RelativePath=".\particle.cpp">
@@ -486,7 +492,13 @@
 				RelativePath=".\mesh.h">
 			</File>
 			<File
+				RelativePath=".\mesh_BSP.h">
+			</File>
+			<File
 				RelativePath=".\network.h">
+			</File>
+			<File
+				RelativePath=".\object_BSP.h">
 			</File>
 			<File
 				RelativePath=".\particle.h">
