- working on the object lists now. It appears that everything is spawning in game, but it pretty slow

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -41,7 +41,7 @@
 				Detect64BitPortabilityProblems="FALSE"
 				DebugInformationFormat="4"
 				CompileAs="0"
-				DisableSpecificWarnings="4127;4239;4130"
+				DisableSpecificWarnings="4127"
 				ShowIncludes="FALSE"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
