- ARGH! I discovered a problem with my OpenGL driver where the gl display list was crashing the OpenGL .dll ! Anyway, I hope this is not something that will plague the development. Maybe a Global parameter for "use display lists"? - Added a win32-only bit of code to catch the exception being generated by the .dll. It will be removed shortly. - completely removed the mmgr.h dependency, since it was mis-interpreting the system memory allocations and causing the program to hang on exit and not let me turn off my computer normally. Double yuck. - Made some updates to the graphics. The DITHER option was being interpreted as a high graphics option, when it is a very low graphics option that was meant to help out 8-bit and 16-bit color. I separated this from the MIPMAP_HINT option and adjusted the 3d fx code in the menu to make a "possibly" better combination - changed the way that the texture filter stuff is stored in the config file, as ##_BLAH, where the number is used to determine the texture filter number (assumes a 0 == TX_UNFILTERED if there is no number). The text is ignored by the machine on input, and output as the correct name when the file is saved.

--- a/game/game_vs7.vcproj
+++ b/game/game_vs7.vcproj
@@ -1058,6 +1058,12 @@
 			<File
 				RelativePath=".\Fluid_Studios_Memory_Manager\mmgr.cpp">
 				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
+				<FileConfiguration
 					Name="Release|Win32"
 					ExcludedFromBuild="TRUE">
 					<Tool
